--- a/ios/LearnColorsByBalloons/Info.plist
+++ b/ios/LearnColorsByBalloons/Info.plist
@@ -28,7 +28,7 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>localhost</key>
+			<key>localhosttt</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
